basic front-end complete

--- a/client/core/forms/campaign/campaign.form.html
+++ b/client/core/forms/campaign/campaign.form.html
@@ -30,6 +30,6 @@
         <input formControlName="current"
                matInput>
       </mat-form-field>
-      <mat-slide-toggle [formControl]="isComplete">isComplete?</mat-slide-toggle>
+      <mat-slide-toggle formControlName="isComplete">isComplete?</mat-slide-toggle>
     </section>
   </form>
